Major bug squashinga and small css fixes|180|

--- a/screen.css
+++ b/screen.css
@@ -15,6 +15,10 @@ textarea
 	resize:none;
 	border-radius: 3px;
 }
+a:visited
+{
+	text-decoration: none;
+}
 #container
 {
 	height: 600px;
